# mosthosts

./: .gitmodules  README.md  desi_everest_pullspec.ipynb  desi_findspec.py  desi_pullspec.ipynb  desi_spec_at_radec.ipynb  desi_specfinder.py  desi_specinfo.py  everest_specinfo.py  exportspectra.py  load_mosthosts_files.py  mosthosts_bts.py  mosthosts_desi.py  mosthosts_desi_daily.csv  mosthosts_desi_daily_desiobs.csv  mosthosts_desi_everest_desiobs.csv  mosthosts_desi_fuji.csv  mosthosts_desi_fuji_desiobs.csv  mosthosts_desi_fujilupe.csv  mosthosts_desi_fujilupe_desiobs.csv  mosthosts_desi_guadalupe.csv  mosthosts_desi_guadalupe_desiobs.csv  mosthosts_skyportal.py  mosthosts_source_info.py  pantheonfilter.py  specmatch.ipynb  specmatch_everest.ipynb  spectrum_uploader.py
extern_data/: SGA-2020.fits
files_mosthosts_080223_old/: df_additional_Greg_filtered_shreds.csv  df_marshall_hosts_filtered_shreds.csv
jupyter/: compare_new_to_desitarget.ipynb  desi_pullspec.ipynb  find_mosthosts_duplicates.ipynb  specmatch.ipynb  targetmatch.ipynb  ztf-bts-desi.ipynb
lib/: desi_specfinder.py  mosthosts_desi.py  mosthosts_skyportal.py  mosthosts_source_info.py
scripts/: loadsga.py  spectrum_uploader.py
spin/: 000-default.conf  Dockerfile  mosthosts-cert.yaml  mosthosts-ingress-service.yaml  mosthosts-ingress.yaml  mosthosts-secret.yaml  mosthosts.yaml  (+2 more)
viewthing/: Makefile.in  configure  configure.ac
viewthing/autom4te.cache/: output.0  requests  traces.0  traces.1
viewthing/src/: Makefile.am  Makefile.in  db.py  mosthosts.css  mosthosts.js  mosthosts_start.js  view.py
(+29 files in other folders)
