webapdir = $(prefix)/html
webap_SCRIPTS = db.py view.py mosthosts.js mosthosts_start.js mosthosts.css \
	rkwebutil/aes.js rkwebutil/auth.py rkwebutil/config.py rkwebutil/rkwebutil.py \
	rkwebutil/jsencrypt.min.js rkwebutil/resetpasswd_start.js rkwebutil/rkauth.js rkwebutil/rkwebutil.js

install-exec-hook:
	mkdir -p @sessiondir@
